tests/pure/impure_call.sy
f :: fn ->
    1
end

start :: pu do
    f'
end

// error: Cannot call impure functions from pure functions
